[package]
name = "ez_logking"
version = "0.1.0"
edition = "2021"
authors = ["bounkyokth@hotmail.com"]
repository = "git@github.com:GIOKTH/ez-logking.git"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-appender = "0.2.2" # ໃຊ້ 0.2.2 ເພື່ອໃຫ້ມີ Builder::lossy
chrono = "0.4"
serde_json = "1.0"