[package]
name = "ez_logking"
version = "0.1.0"
edition = "2021"
authors = ["bounkyokth@hotmail.com"]
description = "help you crate log file on your project easier and also format the log output"
license = "MIT OR Apache-2.0"
repository = "https://github.com/GIOKTH/ez-logking.git"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-appender = "0.2.2"
chrono = "0.4"
serde_json = "1.0"